--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -6,24 +6,14 @@
         settings.py context processors as 'home.context_processors.settings' -->
 </head>
 <body>
-    <h1>Welcome to the DJ4E Samples</h1>
+    <h1>Welcome to the Samples</h1>
     <p>
     Here are some samples (Each will open in a new tab):
     <ul>
         <li><a href="hello" target="_blank">hello</a> - A very simple view</li>
         <li><b>users</b> - One table model / SQL - uses the django shell
             and <a href="admin" target="_blank">admin</a></li>
-        <li><b>tracks</b> -  Many to one models / SQL - uses the django shell
-            and <a href="admin" target="_blank">admin</a></li>
-        <li><b>many</b> -  Many to many models - Loading data from a script
-            and <a href="admin" target="_blank">admin</a>
-            (<a href="https://www.dj4e.com/assn/dj4e_load.md" target="_blank">Assignment</a>)
-        </li>
-        <li><a href="site" target="_blank">site</a> - An example folder with HTML content</li>
-
-        <li><a href="autos" target="_blank">autos</a> - Autos CRUD
-            (<a href="https://www.dj4e.com/assn/dj4e_autos.md" target="_blank">Assignment</a>)
-        </li>
+    
         <li>Add a <a href="/favicon.ico" target="_blank">favicon</a>
             in <b>samples/urls.py</b> and <b>home/static</b>
             (<a href="https://favicon.io/favicon-converter/" target="_blank">Make your own</a>)
