--- a/ads/templates/ads/ad_detail.html
+++ b/ads/templates/ads/ad_detail.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="dj4e" content="cb5e167492be00a8d04fff1532fd0ec4">
-    <title>Title</title>
+    <title>Details</title>
 </head>
 <body>
 {% extends "base_menu.html" %}
